// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CollabBannerContent (snapshots) > renders the edit-guest connected state with host indicator and Leave 1`] = `
<output
  aria-live="polite"
  class="flex items-center gap-3 border-b px-4 py-1.5 text-sm border-sky-200 bg-sky-50 text-sky-900 dark:border-sky-900/60 dark:bg-sky-950/40 dark:text-sky-100"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-users"
    fill="none"
    height="14"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
    />
    <path
      d="M16 3.128a4 4 0 0 1 0 7.744"
    />
    <path
      d="M22 21v-2a4 4 0 0 0-3-3.87"
    />
    <circle
      cx="9"
      cy="7"
      r="4"
    />
  </svg>
  <span
    class="font-medium"
  >
    Joined as edit
  </span>
  <span
    class="opacity-80"
  >
    ·
  </span>
  <span>
    2 peers
  </span>
  <span
    class="opacity-80"
  >
    ·
  </span>
  <span>
    Host present
  </span>
  <button
    class="ml-auto inline-flex items-center gap-1 rounded border border-current/30 px-2 py-0.5 text-xs font-medium hover:bg-black/5 dark:hover:bg-white/5"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-log-out"
      fill="none"
      height="12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 17 5-5-5-5"
      />
      <path
        d="M21 12H9"
      />
      <path
        d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
      />
    </svg>
    Leave
  </button>
</output>
`;

exports[`CollabBannerContent (snapshots) > renders the host_disconnected grace state with a deterministic countdown 1`] = `
<output
  aria-live="polite"
  class="flex items-center gap-3 border-b px-4 py-1.5 text-sm border-amber-200 bg-amber-50 text-amber-900 dark:border-amber-900/60 dark:bg-amber-950/40 dark:text-amber-100"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-users"
    fill="none"
    height="14"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
    />
    <path
      d="M16 3.128a4 4 0 0 1 0 7.744"
    />
    <path
      d="M22 21v-2a4 4 0 0 0-3-3.87"
    />
    <circle
      cx="9"
      cy="7"
      r="4"
    />
  </svg>
  <span
    class="font-medium"
  >
    Host disconnected — 30s left
  </span>
  <span
    class="opacity-80"
  >
    ·
  </span>
  <span>
    2 peers
  </span>
  <button
    class="ml-auto inline-flex items-center gap-1 rounded border border-current/30 px-2 py-0.5 text-xs font-medium hover:bg-black/5 dark:hover:bg-white/5"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-log-out"
      fill="none"
      height="12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 17 5-5-5-5"
      />
      <path
        d="M21 12H9"
      />
      <path
        d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
      />
    </svg>
    Leave
  </button>
</output>
`;

exports[`CollabBannerContent (snapshots) > renders the host_disconnected state with an exhausted timer 1`] = `
<output
  aria-live="polite"
  class="flex items-center gap-3 border-b px-4 py-1.5 text-sm border-amber-200 bg-amber-50 text-amber-900 dark:border-amber-900/60 dark:bg-amber-950/40 dark:text-amber-100"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-users"
    fill="none"
    height="14"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
    />
    <path
      d="M16 3.128a4 4 0 0 1 0 7.744"
    />
    <path
      d="M22 21v-2a4 4 0 0 0-3-3.87"
    />
    <circle
      cx="9"
      cy="7"
      r="4"
    />
  </svg>
  <span
    class="font-medium"
  >
    Host disconnected — 0s left
  </span>
  <span
    class="opacity-80"
  >
    ·
  </span>
  <span>
    2 peers
  </span>
  <button
    class="ml-auto inline-flex items-center gap-1 rounded border border-current/30 px-2 py-0.5 text-xs font-medium hover:bg-black/5 dark:hover:bg-white/5"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-log-out"
      fill="none"
      height="12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 17 5-5-5-5"
      />
      <path
        d="M21 12H9"
      />
      <path
        d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
      />
    </svg>
    Leave
  </button>
</output>
`;

exports[`CollabBannerContent (snapshots) > renders the host-connected state with peer count and End session 1`] = `
<output
  aria-live="polite"
  class="flex items-center gap-3 border-b px-4 py-1.5 text-sm border-emerald-200 bg-emerald-50 text-emerald-900 dark:border-emerald-900/60 dark:bg-emerald-950/40 dark:text-emerald-100"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-users"
    fill="none"
    height="14"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
    />
    <path
      d="M16 3.128a4 4 0 0 1 0 7.744"
    />
    <path
      d="M22 21v-2a4 4 0 0 0-3-3.87"
    />
    <circle
      cx="9"
      cy="7"
      r="4"
    />
  </svg>
  <span
    class="font-medium"
  >
    Sharing as host
  </span>
  <span
    class="opacity-80"
  >
    ·
  </span>
  <span>
    3 peers
  </span>
  <button
    class="ml-auto inline-flex items-center gap-1 rounded border border-current/30 px-2 py-0.5 text-xs font-medium hover:bg-black/5 dark:hover:bg-white/5"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-log-out"
      fill="none"
      height="12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 17 5-5-5-5"
      />
      <path
        d="M21 12H9"
      />
      <path
        d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
      />
    </svg>
    End session
  </button>
</output>
`;

exports[`CollabBannerContent (snapshots) > renders the view-guest connected state with host-away indicator 1`] = `
<output
  aria-live="polite"
  class="flex items-center gap-3 border-b px-4 py-1.5 text-sm border-sky-200 bg-sky-50 text-sky-900 dark:border-sky-900/60 dark:bg-sky-950/40 dark:text-sky-100"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-users"
    fill="none"
    height="14"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
    />
    <path
      d="M16 3.128a4 4 0 0 1 0 7.744"
    />
    <path
      d="M22 21v-2a4 4 0 0 0-3-3.87"
    />
    <circle
      cx="9"
      cy="7"
      r="4"
    />
  </svg>
  <span
    class="font-medium"
  >
    Joined as view
  </span>
  <span
    class="opacity-80"
  >
    ·
  </span>
  <span>
    4 peers
  </span>
  <span
    class="opacity-80"
  >
    ·
  </span>
  <span>
    Host away
  </span>
  <button
    class="ml-auto inline-flex items-center gap-1 rounded border border-current/30 px-2 py-0.5 text-xs font-medium hover:bg-black/5 dark:hover:bg-white/5"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-log-out"
      fill="none"
      height="12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 17 5-5-5-5"
      />
      <path
        d="M21 12H9"
      />
      <path
        d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
      />
    </svg>
    Leave
  </button>
</output>
`;
